# Blockmango-2020-src

./: README.md  WebService.lua  serverConfig.json
engine-10068/dev/client/Src/: BattleSummary.cpp  BattleSummary.h  CMakeLists.txt  ShellInterface.cpp  ShellInterface.h  game.cpp  game.h  iniFileObj.cpp  iniFileObj.h
engine-10068/dev/client/Src/Audio/: FModApi.cpp  FModApi.h  FModAudioEngine.cpp  FModAudioEngine.h
engine-10068/dev/client/Src/Blockman/: bm_clientDef.h
engine-10068/dev/client/Src/GameAnalytics/: GameAnalyticsRequest.cpp  GameAnalyticsRequest.h  GameAnalyticsSetting.cpp  GameAnalyticsSetting.h
engine-10068/dev/client/Src/LuaRegister/: AutoClientRegister.h
engine-10068/dev/client/Src/Network/: ClientCommonDataSender.cpp  ClientCommonDataSender.h  ClientHttpRequest.cpp  ClientHttpRequest.h  ClientNetwork.cpp  ClientNetwork.h  ClientNetworkCore.cpp  ClientNetworkCore.h  ClientNetworkRecver.cpp  ClientNetworkRecver.h  ClientNetworkRecver_PacketRegister100.cpp  ClientNetworkRecver_PacketRegister200.cpp  ClientNetworkRecver_PacketRegisterEnd.cpp  ClientNetworkRecver_inner.cpp  ClientPacketSender.cpp  ClientPacketSender.h  DataCache.cpp  DataCache.h  S2CPacketDispatch.h
engine-10068/dev/client/Src/Plugins/: DynamicCastClientEntity.h  DynamicCastHelper.h  GameClientEvents.h  HostApi.h  PluginManager.cpp  PluginManager.h
engine-10068/dev/client/Src/Setting/: ActionStateSetting.cpp  ActionStateSetting.h  AdvertSetting.cpp  AdvertSetting.h  ArmorSetting.cpp  ArmorSetting.h  BirdItemSetting.cpp  BirdItemSetting.h  BlockCityPortalSetting.cpp  BlockCityPortalSetting.h  BlockCitySetting.cpp  BlockCitySetting.h  BlockFortItemSetting.cpp  BlockFortItemSetting.h  BriefIntroductionSetting.cpp  BriefIntroductionSetting.h  ChestLotterySetting.cpp  ChestLotterySetting.h  ClassificationSetting.cpp  ClassificationSetting.h  CustomItemSetting.cpp  CustomItemSetting.h  DesignationSetting.cpp  DesignationSetting.h  FormulationSetting.cpp  FormulationSetting.h  FunctionSetting.cpp  FunctionSetting.h  GuideSystemSetting.cpp  GuideSystemSetting.h  GunStoreSetting.cpp  GunStoreSetting.h  HelpSetting.cpp  HelpSetting.h  PixelGunGiftBagSetting.cpp  PixelGunGiftBagSetting.h  RankLangSetting.cpp  RankLangSetting.h  RewardSetting.cpp  RewardSetting.h  (+24 more)
engine-10068/dev/client/Src/Util/: BroadcastManager.cpp  BroadcastManager.h  ClientCmdMgr.cpp  ClientCmdMgr.h  ClientDataReport.cpp  ClientDataReport.h  ClientEvents.h  FriendManager.cpp  FriendManager.h  LanguageManager.cpp  LanguageManager.h  MailManager.cpp  MailManager.h  RankManager.cpp  RankManager.h  RedDotManager.cpp  RedDotManager.h  SkillEffectManager.cpp  SkillEffectManager.h  ThumbUpRecordManager.cpp  ThumbUpRecordManager.h  TipType.h  UICommon.cpp  UICommon.h  UserManager.cpp  UserManager.h
engine-10068/dev/logic/: CMakeLists.txt
engine-10068/dev/logic/ApkBuild/jni/: Android.mk  Application.mk
engine-10068/dev/logic/Src/: BM_Container_def.h  BM_TypeDef.h  CMakeLists.txt  Common.cpp  Common.h  GameVersionDefine.cpp  GameVersionDefine.h  LanguageDef.h  RTTI.h  RegConfig.ini
engine-10068/dev/logic/Src/AI/: AIBase.h  AIMoveToRestriction.cpp  AIMoveToRestriction.h  AITask.cpp  AITask.h  PathPlanner.cpp  PathPlanner.h
engine-10068/dev/logic/Src/Any/: Any.h  VarList.h
engine-10068/dev/logic/Src/Block/: BM_Material.cpp  BM_Material.h  Block.cpp  Block.h  BlockArchive.cpp  BlockArchive.h  BlockConfig.cpp  BlockConfig.h  BlockLoader.cpp  BlockLoader.h  BlockManager.cpp  BlockManager.h  BlockRailLogic.cpp  BlockRailLogic.h  BlockUtil.h  Blocks.cpp  Blocks.h  CustomBlock.cpp  CustomBlock.h
engine-10068/dev/logic/Src/Chat/: ChatComponent.h  ChatUtils.cpp  ChatUtils.h
engine-10068/dev/logic/Src/Chunk/: Chunk.cpp  Chunk.h  ChunkCache.cpp  ChunkCache.h  ChunkReadableStorageFile.cpp  ChunkReadableStorageFile.h  ChunkService.cpp  ChunkService.h  IChunkProvider.h  IChunkStorage.h  RangeChunkCache.h
engine-10068/dev/logic/Src/Component/: Component.h
engine-10068/dev/logic/Src/Entity/: Attributes.cpp  Attributes.h  CombatTracker.cpp  CombatTracker.h  DamageSource.cpp  DamageSource.h  Enchantment.cpp  Enchantment.h  Entity.cpp  Entity.h  EntityActorCannon.cpp  EntityActorCannon.h  EntityActorNpc.cpp  EntityActorNpc.h  EntityAircraft.cpp  EntityAircraft.h  EntityArrow.cpp  EntityArrow.h  EntityBird.cpp  EntityBird.h  EntityBlockman.cpp  EntityBlockman.h  EntityBlockmanEmpty.cpp  EntityBlockmanEmpty.h  EntityBuildNpc.cpp  EntityBuildNpc.h  EntityBullet.cpp  EntityBullet.h  EntityBulletin.cpp  EntityBulletin.h  EntityCreature.cpp  EntityCreature.h  EntityCreatureBullet.cpp  EntityCreatureBullet.h  EntityDecoration.cpp  EntityDecoration.h  EntityFireball.cpp  EntityFireball.h  EntityFishHook.cpp  EntityFishHook.h  (+50 more)
engine-10068/dev/logic/Src/Enums/: Enums.h
engine-10068/dev/logic/Src/Game/: BirdSimulator.cpp  BirdSimulator.h  BlockCity.cpp  BlockCity.h  BlockFort.cpp  BlockFort.h  Manor.cpp  Manor.h  Ranch.cpp  Ranch.h
engine-10068/dev/logic/Src/Inventory/: Backpack.cpp  Backpack.h  CoinManager.cpp  CoinManager.h  Container.cpp  Container.h  Crafting.cpp  Crafting.h  CraftingManager.cpp  CraftingManager.h  IInventory.cpp  IInventory.h  InventoryCraftable.cpp  InventoryCraftable.h  InventoryCrafting.cpp  InventoryCrafting.h  InventoryEnderChest.cpp  InventoryEnderChest.h  InventoryFiltered.cpp  InventoryFiltered.h  InventoryHandCraftable.h  InventoryLargeChest.cpp  InventoryLargeChest.h  InventoryPlayer.cpp  InventoryPlayer.h  InventoryProxy.h  InventorySubset.h  Slot.cpp  Slot.h  Wallet.cpp  Wallet.h
engine-10068/dev/logic/Src/Item/: BehaviorDispenseItem.cpp  BehaviorDispenseItem.h  Ingredient.cpp  Ingredient.h  Item.cpp  Item.h  (+14 more)
engine-10068/dev/server/: CMakeLists.txt  WinServer.sln
engine-10068/dev/server/src/: BtTreeController.cpp  BtTreeController.h  CMakeLists.txt  CommodityManager.cpp  CommodityManager.h  Global.h  RegConfig.ini  RoomManager.cpp  RoomManager.h  Server.cpp  Server.h  Test.cpp  Test.h  main.cpp
engine-10068/engine-core/dev/clothes/: CMakeLists.txt
engine-10068/engine-core/dev/engine/: CMakeLists.txt
(+12242 files in other folders)
