cmake_minimum_required(VERSION 2.8)

if(COMMAND cmake_policy)  
	cmake_policy(SET CMP0015 NEW)  
endif(COMMAND cmake_policy)  

IF (CMAKE_BUILD_TYPE MATCHES "Debug" OR CMAKE_BUILD_TYPE MATCHES "None")  
    MESSAGE(STATUS "CMAKE_BUILD_TYPE is Debug")  
ELSEIF (CMAKE_BUILD_TYPE MATCHES "Release")  
    MESSAGE(STATUS "CMAKE_BUILD_TYPE is Release")
ENDIF()

SET(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_ALLOW_LOSSE_LOOP_CONSTRUCTS ON)

project(Server)

message(STATUS "#####################################################################")
message(STATUS "# Server Build System")
message(STATUS "#####################################################################")
message(STATUS "Configuring build system...")
message(STATUS "CMake version: ${CMAKE_VERSION}")
message(STATUS "Platform: ${CMAKE_SYSTEM_NAME}")

# CMake 2.8.2 has a bug that creates unusable Xcode projects when using ARCHS_STANDARD_32_BIT
# to specify both armv6 and armv7.
#if(CMAKE_VERSION VERSION_EQUAL 2.8.2)
#	message(FATAL_ERROR "CMake 2.8.2 cannot create compatible Xcode projects for iOS")
#endif()

option(LORD_STATIC "Static build" TRUE)

if(WIN32)

		set(LORD_PLATFORM_WIN32 TRUE)
		message(STATUS "Platform: Windows")
	
		# compiler building setting
		# Flags used by the compiler during all build types.
		set(CMAKE_CXX_FLAGS "/DWIN32 /D_WINDOWS /W3 /EHsc /GR /MP /bigobj")
		# Flags used by the compiler during debug builds.
		set(CMAKE_CXX_FLAGS_DEBUG "/D_DEBUG /MDd /Zi /Ob0 /Od /RTC1")
		# Flags used by the compiler during release minsize builds.
		set(CMAKE_CXX_FLAGS_MINSIZEREL "/MD /O1 /Ob1 /D NDEBUG")
		# Flags used by the compiler during release builds (/MD /Ob1 /Oi /Ot /Oy /Gs will produce slightly less optimized but smaller files).
		set(CMAKE_CXX_FLAGS_RELEASE "/MD /O2 /Ob2 /D NDEBUG")
		# Flags used by the compiler during Release with Debug Info builds.
		set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/MD /Zi /O2 /Ob1 /D NDEBUG")
		# Flags used by the compiler during all build types.
		set(CMAKE_C_FLAGS "/DWIN32 /D_WINDOWS /W3")
		# Flags used by the compiler during debug builds.
		set(CMAKE_C_FLAGS_DEBUG "/D_DEBUG /MDd /Zi  /Ob0 /Od /RTC1")
		# Flags used by the compiler during release minsize builds.
		set(CMAKE_C_FLAGS_MINSIZEREL "/MD /O1 /Ob1 /D NDEBUG")
		# Flags used by the compiler during release builds (/MD /Ob1 /Oi /Ot /Oy /Gs will produce slightly less optimized but smaller files).
		set(CMAKE_C_FLAGS_RELEASE "/MD /O2 /Ob2 /D NDEBUG")
		# Flags used by the compiler during Release with Debug Info builds.
		set(CMAKE_C_FLAGS_RELWITHDEBINFO "/MD /Zi /O2 /Ob1 /D NDEBUG")
		
		if(MSVC)
			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fp:fast")
			
			# Enable intrinsics on MSVC in debug mode
			set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Oi")
			if (CMAKE_CL_64)
				# Visual Studio bails out on debug builds in 64bit mode unless
				# this flag is set...
				set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj")
				set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /bigobj")
			endif ()
			
		endif()
		
		# This seems to break Xcode projects so definitely don't enable on Apple builds
		set(CMAKE_USE_RELATIVE_PATHS true)
		set(CMAKE_SUPPRESS_REGENERATION true)

elseif(UNIX)
		message(STATUS "Platform: Unix/Linux")
		set(LORD_PLATFORM_LINUX TRUE)
		set(LORD_STATIC TRUE CACHE BOOL "Forcing static build for linux" FORCE)
		
		set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -g -std=c++11 --no-warnings -D_FORCE_INLINES")
	    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g -std=c++11 --no-warnings -D_FORCE_INLINES")
	    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -O2 -std=c++11 --no-warnings  -Wfatal-errors -D_FORCE_INLINES")
		set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O2 -std=c++11 --no-warnings -Wfatal-errors -D_FORCE_INLINES")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_RELEASE} -g -std=c++11 --no-warnings -D_FORCE_INLINES")


endif()

message(STATUS "Set Environment Variables...")

if(CMAKE_BUILD_TYPE STREQUAL "")
  # CMake defaults to leaving CMAKE_BUILD_TYPE empty. This screws up
  # differentiation between debug and release builds.
#  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: None (CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel." FORCE)
endif ()

set(SERVER_ROOT_PATH "${PROJECT_SOURCE_DIR}")
set(PROJECT_SOURCE_DIR "${SERVER_ROOT_PATH}/src")


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${SERVER_ROOT_PATH}/Bin/${CMAKE_BUILD_TYPE}")
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${SERVER_ROOT_PATH}/../../res/client")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${SERVER_ROOT_PATH}/Bin/${CMAKE_BUILD_TYPE}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${SERVER_ROOT_PATH}/Bin/${CMAKE_BUILD_TYPE}")
set(LORD_DEP_PATH "../../../engine-core/dev/engine/Dependencies")
set(LOGIC_DEP_PATH "../../logic/dependencies")
set(SERVER_DEP_PATH "../../server/dependencies")
if(LORD_PLATFORM_LINUX)
    IF (CMAKE_BUILD_TYPE MATCHES "Debug" OR CMAKE_BUILD_TYPE MATCHES "None")  
        MESSAGE(STATUS "CMAKE_BUILD_TYPE is Debug")  
        set(LOGIC_BIN_PATH "../../logic/Bin/Debug")
        set(CORE_BIN_PATH "../../../engine-core/dev/engine/Bin/Debug")
    ELSEIF (CMAKE_BUILD_TYPE MATCHES "Release")  
        MESSAGE(STATUS "CMAKE_BUILD_TYPE is Release")
        set(LOGIC_BIN_PATH "../../logic/Bin/Release")
        set(CORE_BIN_PATH "../../../engine-core/dev/engine/Bin/Release")
    ENDIF()
else()
    set(LOGIC_BIN_PATH "../../logic/Bin")
    set(CORE_BIN_PATH "../../../engine-core/dev/engine/Bin")
endif()

if(LORD_PLATFORM_IOS)
    set(LORD_SRC_PATH "../../../engine-core/dev/engine/Src")
else()
    set(LORD_SRC_PATH "../../../engine-core/dev/engine/Src")
endif()

set(LOGIC_SRC_PATH "../../logic/Src")

if(LORD_PLATFORM_WIN32)
	set(CLIENT_URL_PATH "../curl/Windows")
elseif(LORD_PLATFORM_ANDROID)
	set(CLIENT_URL_PATH "../curl/Android")
elseif(LORD_PLATFORM_LINUX)
	set(CLIENT_URL_PATH "../curl/Android")
else()
	set(CLIENT_URL_PATH "../curl/IOS")
endif()

message(STATUS "\${CMAKE_BUILD_TYPE}: ${CMAKE_BUILD_TYPE}")
message(STATUS "\${PROJECT_SOURCE_DIR}: ${PROJECT_SOURCE_DIR}")
message(STATUS "\${PROJECT_BINARY_DIR}: ${PROJECT_BINARY_DIR}")
message(STATUS "\${SERVER_ROOT_PATH}: ${SERVER_ROOT_PATH}")
message(STATUS "\${LOGIC_DEP_PATH}: ${LOGIC_DEP_PATH}")
message(STATUS "\${LORD_DEP_PATH}: ${LORD_DEP_PATH}")
message(STATUS "\${SERVER_DEP_PATH}: ${SERVER_DEP_PATH}")

# Add sub directories
add_subdirectory("src")
